# C_Programming_A_Modern_Approach_exercises_projects

./: Makefile  add_newline.c  ch10_exercises.c  ch10_guess.c  ch10_guess2.c  ch10_poker.c  ch10_project2_poker.c  ch10_project3_poker.c  ch10_project4_poker.c  ch10_project5_poker.c  ch10_project6_RPN.c  ch10_project7_seven_segment.c  ch10_projects.c  ch11_exercises.c  ch11_maxmin.c  ch11_project4_poker.c  ch11_projects.c  ch12_exercises.c  ch12_projects.c  ch12_reverse.c  ch13_exercises.c  ch13_planet.c  ch13_project15_RPN.c  ch13_projects.c  ch13_remind.c  ch13_reverse.c  ch13_sum.c  ch14_exercises.c  ch16_exercises.c  ch16_projects.c  ch17_exercises.c  ch17_projects.c  ch18_exercises.c  ch19_exercises.c  ch19_projects.c  ch20_exercises.c  ch20_projects.c  ch21_exercises.c  ch21_projects.c  ch22_exercises.c  (+62 more)
ch15/ch15_exercises/: CMakeLists.txt  Makefile  debug.h  f1.c  f1.h  f2.c  f2.h  main.c  testdebug.c
ch15/ch15_justify/: CMakeLists.txt  Makefile  justify.c  line.c
ch15/ch15_projects/project1/: Book1.xlsx  justify.c  line.c
ch15/ch15_projects/project2/: justify.c  word.c
ch15/ch15_projects/project3/: CMakeLists.txt  qsort.c  quicksort.c  quicksort.h
ch15/ch15_projects/project4/: CMakeLists.txt  readline.c  remind.c
ch15/ch15_projects/project5/: CMakeLists copy.txt  CMakeLists.txt  calc.c  stack.c  stack.h
ch15/ch15_test/: CMakeLists.txt  bar.c  bar.h  bar_test.c  barz.c  barz.h  foo.c  foo.h
ch16/inventory/: CMakeLists.txt  inventory_3.c  inventory_4.c
ch17/ch17_exercises/exercise10/: CMakeLists.txt  inventory.c
ch17/ch17_exercises/exercise8/: calc.c  stack.c  stack.h
ch17/ch17_projects/project1/: CMakeLists.txt  inventory.c
ch17/ch17_projects/project3/: CMakeLists.txt  inventory2.c
ch17/ch17_projects/project4/: CMakeLists.txt  justify.c  line.c  line.h
ch19/ch19_exercises/: CMakeLists.txt  ch19_exercise3.c  ch19_exercise4.c  ch19_exercise5.c  ch19_exercise6.c  ch19_exercise7.c  queue.c  queue.h  queue_exercise5.c  queue_exercise5.h  queue_linked-list.c  stack2_exercise2.c  stackADT.c  stackADT.h  stackADT2_exercise7.c  stackADT3.c  stack_exercise4a.c  stack_exercise4a.h  stack_exercise4b.c  stack_exercise4b.h
ch19/ch19_projects/: CMakeLists.txt  ch19_project1.c  ch19_project2_RPN.c  ch19_project3_stackclient.c  ch19_project4_stackclient.c  ch19_project5_queueclient.c  ch19_project7_queueclient.c  queueADT.c  queueADT.h  queueADT_project7.c  stackADT.h  stackADT3.c  stackADT3_project3.c  stackADT3_project4.c  stackADT_project4.h
ch22/ch22_projects/: CMakeLists.txt  abb  abbc  abc  inventory.c  inventory_5.c  inventory_6.c  justify.c  line.c  line.h  project_10_inventory_linked_list.c  project_9_merge_inventory.c  readline.c  word.c  word.h  word_justify.c
ch24/ch24_exercises/: CMakeLists.txt  ch24_exercise3.c  ch24_exercise5.c  readline.h  stackADT2.c  stackADT2.h  stackADT2_exercise3.c
linked_list_test/: CMakeLists.txt  link_list_test.c  test_lib.c  test_lib.h
